2020-07-21 
	Cto24HDetalle6
	Cto24HDetalle5
	Cálculo de totales de Cto24HDetalle4

2020-07-07
	Query de métodos promedio como atributos
	Validar es necesario grabar los promedios (SI)
	Revisar acceso al sistema por IP pública

2020-07-03 
	Cambio de Pestañas por Secciones en Cto24HTest
	Ajuste de hora en Cto24HTest
	Ajuste de hora en BtuLbBagazo
	Ajuste de hora en TamanoGrano
	Ajuste de hora en Grasshoper

2020-07-02 
	Ajuste de hora en AzucarCrudo
	Ajuste de hora en Mieles
	Ajuste de hora en TqFundidor
	Ajuste de hora en Magmas
	Ajuste de hora en AzucarGranel
	Ajuste de hora en MielesNutsch
	Ajuste de hora en Masas
	Ajuste de hora en Fosfatos
	Ajuste de hora en Meladura
	Ajuste de hora en Ph
	Ajuste de hora en Turbiedad

2020-07-01 
	Ajuste de hora en Bagazo
	Validación nulos de query.resultList

2020-06-29 
	Ajuste de hora en Jugo
	Clase con datos generales para pruebas +ingenio

2020-06-26
	Crear tarea para generar war sin libs

2020-06-25
	Ajuste de hora en Trashm Caña y Material

2020-06-24
	Ajuste de hora en Trash

2020-06-22 
	CRUD.delete impedir borrar un registro
	Diagrama de proceso para conteo de sacos por código de barras
	Ajuste de horaS y hora en TrashCanaTest

2020-06-21
	Ajuste de hora en TrashCana
	Agregar campo horaS para formar la hora real
	LocalDate to java.sql.Timestamp

2020-06-19
	Descripción DiaTrabajo
	Tablas BrixDensidad ReadOnly

2020-06-18
	Archivar en changelog.txt
	Cálculo %A.R. en TrashCana
	TrashCana calendario para fecha