@@ -1,14 +1,19 @@
 id,descripcion
-01,CAÑA/DIA
-02,AGUA MACERACION
-03,JUGO DILUIDO (BR)
-04,BAGAZO (CALCULADO)
-05,BAGAZO (DIRECTO)
-06,CACHAZA
-07,MIEL FINAL MELAZA
-08,AZUCAR BLANCA
-09,CAÑA NETA
-10,JUGO NETO
-11,MELADURA
-12,HOJA DE CAÑA
-13,SACOS DISUELTOS
+001,"CAÑA/DIA"
+002,"AGUA MACERACION"
+003,"JUGO DILUIDO (BR)"
+004,"BAGAZO (CALCULADO)"
+005,"BAGAZO (DIRECTO)"
+006,"CACHAZA"
+007,"MIEL FINAL MELAZA"
+008,"AZUCAR BLANCA"
+009,"CAÑA NETA"
+010,"JUGO NETO"
+011,"MELADURA"
+012,"HOJA DE CAÑA"
+013,"SACOS DISUELTOS"
+014,"BX J. CLARO"
+015,"SALIDA EVAP I"
+016,"SALIDA EVAP II"
+017,"SALIDA EVAP III"
+018,"SALIDA EVAP IV"
