@@ -7,6 +7,8 @@
 -- PostgreSQL
 --DROP SCHEMA ingenio CASCADE;
 
+DROP TABLE ingenio.cto24h_detalle8;
+DROP TABLE ingenio.cto24hdetalle7;
 DROP TABLE ingenio.cto24hdetalle6;
 DROP TABLE ingenio.cto24hdetalle5;
 DROP TABLE ingenio.cto24h_detalle42;
@@ -14,5 +16,4 @@ DROP TABLE ingenio.cto24h_detalle41;
 DROP TABLE ingenio.cto24hdetalle3;
 DROP TABLE ingenio.cto24hdetalle2;
 DROP TABLE ingenio.cto24hdetalle1;
-DROP TABLE ingenio.cto24hdetalle;
 DROP TABLE ingenio.cto24h;
