@@ -12,11 +12,11 @@ import ec.carper.ingenio.actions.*
 @Entity
 @View(members="""#
     modulo, turno;
-    hora, tipo;
-    mlTitu, fd;
-    ppm
+    horaS, hora;
+    tipo, mlTitu;
+    fd, ppm
 """)
-class Cto24HDetalle extends Identifiable {
+class Cto24HDetalle7 extends Identifiable {
     
     @ManyToOne //Sin lazy fetching porque falla al quitar un detalle desde el padre
     Cto24H cto24H
@@ -27,16 +27,19 @@ class Cto24HDetalle extends Identifiable {
     @ManyToOne(fetch=FetchType.LAZY) @DescriptionsList @NoCreate @NoModify
     Turno turno
     
-    @Stereotype("DATETIME") @Required
+    @Stereotype("TIME") @OnChange(Cto24HDetalle7Action.class) @Required
+    String horaS
+
+    @Stereotype("DATETIME") @ReadOnly @Required
     java.sql.Timestamp hora
 
     Tipo tipo 
     enum Tipo { TIPO_1, TIPO_2 }
     
-    @OnChange(Cto24HDetalleAction.class) @DisplaySize(6)
+    @OnChange(Cto24HDetalle7Action.class) @DisplaySize(6)
     BigDecimal mlTitu
     
-    @OnChange(Cto24HDetalleAction.class) @DisplaySize(6)
+    @OnChange(Cto24HDetalle7Action.class) @DisplaySize(6)
     BigDecimal fd
     
     @ReadOnly @DisplaySize(6)
